testdata/invalid/invalid_import_file_not_parsable.bop
import "./invalid_array_no_close_square.bop"